--- a/Demo_Project/test-output/index.html
+++ b/Demo_Project/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,11 +103,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Login_Tests.Login_Test" hash-for-method="InvalidLoginToHomePage">InvalidLoginToHomePage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Login_Tests.Login_Test" hash-for-method="LoginToHomePage">LoginToHomePage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,19 +130,12 @@
                   <span class="method-name">InvalidLoginToHomePage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LoginToHomePage">
-                  </a> <!-- LoginToHomePage -->
-                  <span class="method-name">LoginToHomePage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/0h/s1b2pbrj1rs1qh7np745mysr0000gp/T/testng-eclipse--633819787/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/0h/s1b2pbrj1rs1qh7np745mysr0000gp/T/testng-eclipse-1694800605/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginToHomePage')
+data.setCell(0, 1, 'InvalidLoginToHomePage')
 data.setCell(0, 2, 'Login_Tests.Login_Test')
-data.setCell(0, 3, 9118);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'InvalidLoginToHomePage')
-data.setCell(1, 2, 'Login_Tests.Login_Test')
-data.setCell(1, 3, 5);
+data.setCell(0, 3, 5);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 5 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +204,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">LoginToHomePage</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Enter User Name Steps completed</span>
-                <span class="reporter-method-output">Clicked on Next Button Steps completed</span>
-                <span class="reporter-method-output">Enter OTP Steps completed</span>
-                <span class="reporter-method-output">Verify OTP Steps completed</span>
-                <span class="reporter-method-output">Enter Password Steps completed</span>
-                <span class="reporter-method-output">Capture the Home Page Steps completed</span>
-                <span class="reporter-method-output">Login is Success</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -254,15 +226,11 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">InvalidLoginToHomePage</span>
-                <span class="method-start">6337 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">LoginToHomePage</span>
-                <span class="method-start">6347 ms</span>
+                <span class="method-start">7630 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">postConditoin</span>
-                <span class="method-start">15469 ms</span>
+                <span class="method-start">7638 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
