--- a/Demo_Project/test-output/old/Default suite/methods.html
+++ b/Demo_Project/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>19/07/02 19:01:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.preCondition()[pri:0, instance:Login_Tests.Login_Test@51565ec2]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009787198</td>   <td></td> </tr>
-<tr bgcolor="f97bb5">  <td>19/07/02 19:01:13</td>   <td>6335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.InvalidLoginToHomePage()[pri:0, instance:Login_Tests.Login_Test@51565ec2]">InvalidLoginToHomePage</td> 
-  <td>main@2009787198</td>   <td></td> </tr>
-<tr bgcolor="f97bb5">  <td>19/07/02 19:01:13</td>   <td>6345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.LoginToHomePage()[pri:0, instance:Login_Tests.Login_Test@51565ec2]">LoginToHomePage</td> 
-  <td>main@2009787198</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/07/02 19:01:22</td>   <td>15467</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.postConditoin()[pri:0, instance:Login_Tests.Login_Test@51565ec2]">&lt;&lt;postConditoin</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009787198</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/07/02 22:38:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.preCondition()[pri:0, instance:Login_Tests.Login_Test@3bb9a3ff]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@952562199</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>19/07/02 22:38:36</td>   <td>7628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.InvalidLoginToHomePage()[pri:0, instance:Login_Tests.Login_Test@3bb9a3ff]">InvalidLoginToHomePage</td> 
+  <td>main@952562199</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/07/02 22:38:36</td>   <td>7636</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.postConditoin()[pri:0, instance:Login_Tests.Login_Test@3bb9a3ff]">&lt;&lt;postConditoin</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@952562199</td>   <td></td> </tr>
 </table>
