--- a/Demo_Project/test-output/old/Default suite/reporter-output.html
+++ b/Demo_Project/test-output/old/Default suite/reporter-output.html
@@ -4,4 +4,5 @@
 <tr><td>Verify OTP Steps completed</td></tr>
 <tr><td>Enter Password Steps completed</td></tr>
 <tr><td>Capture the Home Page Steps completed</td></tr>
+<tr><td>Login is Success</td></tr>
 </table>
